main.css
@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500&display=swap');
header,
nav,
section,
footer,
main {
    display: block;
}

body {
    margin: 0;
    background-color: whitesmoke;
}

html {
    scroll-behavior: smooth;
}

h1 {
    font-family: 'Helvetica', sans-serif;
    font-weight: 600;
    font-size: 4em;
    color: #1c1c1c;
}

h2 {
    font-family: 'Helvetica', sans-serif;
    font-weight: 600;
    font-size: 2.5em;
    color: #1c1c1c;
}

h3 {
    font-family: 'Helvetica', sans-serif;
    font-weight: 500;
    font-size: 1.1em;
    color: #1c1c1c;
}

h4 {
    font-family: 'Helvetica', sans-serif;
    font-weight: 600;
    font-size: 2em;
    color: #1c1c1c;
}

#top-links {
    z-index: 99;
    position: absolute;
    width: 100%;
    background-color: #1f1f1f;
    opacity: 98%;
    text-align: right;
    padding-top: 10px;
    padding-bottom: 10px;
    font-family: 'Helvetica', sans-serif;
    font-size: 0.8em;
}

#top-links a {
    text-decoration: none;

    color: whitesmoke;
    margin-right: 30px;
    transition-duration: 0.2s;
}

#top-links a:hover {
   
}

#header-background-lg {
    z-index: -1;
    position: absolute;
    width: 100%;
    height: 800px;
    opacity: 90%;
}

#header-background-med {
    display: none;
    z-index: -1;
    position: absolute;
    width: 100%;
    height: 800px;
    opacity: 90%;
}

#header-background-sm {
    display: none;
    z-index: -1;
    position: absolute;
    width: 100%;
    height: 800px;
    opacity: 90%;
}

#header-background-xsm {
    display: none;
    z-index: -1;
    position: absolute;
    width: 100%;
    height: 780px;
    opacity: 90%;
}

#header-container {
    margin-top: 90px;
    width: 100%;
    display: flex;
    justify-content: center;
}

#header-text {
    text-align: left;
    margin-top: 12px;
    margin-left: 5px;
}

#header-logo {
    width: auto;
    height: 120px;
}

#header-title {
    padding: 0;
    margin: 0;
    margin-top: 10px;
}

#header-info {
    margin: 0;
    margin-top: 5px;
}

#app-store-link {
    margin-top: 20px;
    width: 100%;
    text-align: center;
}

#main-image {
    position: relative;
    margin-top: 140px;
    width: 50%;
    text-align: center;
}

#pictures {
    position: absolute;
    width: 50%;
}

#base,
#base-btm,
#base-shadow {
    position: absolute;
    top: -10px;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    width: 470px;
}

#base-shadow {
    top: -11px;
    opacity: 40%;
}

#pic-3 {
    animation: MoveUpDownMax 5s ease-in-out .1s infinite;
    position: absolute;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    width: 400px;
}

#pic-2 {
    animation: MoveUpDownMid 5s ease-in-out .1s infinite;
    position: absolute;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    width: 400px;
}

#pic-1 {
    animation: MoveUpDownMin 5s ease-in-out .1s infinite;
    position: absolute;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    width: 400px;
}

#top-container {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-content: center;
    height: 600px;
}

#wrap {
    position: relative;
    width: 95%;
    padding-top: 20px;
    margin: 0 auto;
    max-width: 1400px;
    text-align: center;
}

#banner-1 {
    margin-top: 340px;
    width: 46%;
}

.row {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    width: 100%;
    align-items: center;
    justify-content: center;
    margin-bottom: -60px;
}

.column {
    display: flex;
    flex-direction: column;
    flex-basis: 100%;
    flex: 1;
    justify-content: center;
    align-items: center;
}

.left-img {
    transform: rotate(-2deg) perspective(500px) rotateY(4deg);
    transition-duration: 0.2s;
}

.right-img {
    transform: rotate(2deg) perspective(500px) rotateY(-4deg);
    transition-duration: 0.2s;
}

.left-img:hover {
    transform: rotate(-2deg) perspective(500px) rotateY(1deg);
}

.right-img:hover {
    transform: rotate(2deg) perspective(500px) rotateY(-1deg);
}

.left {
    text-align: left;
}

.right {
    text-align: right;
}

.body-img {
    
    width: 600px;
}

.section-head {
    margin-bottom: 100px;
}

.file-types {
    padding: 10px;
    margin-bottom: 100px;
}

.section-h4 {
    font-weight: 400;
    font-size: 1.4em;
}

#content-container {
    padding: 20px;
    border-radius: 30px;
    margin-top: 120px;
    margin-bottom: 160px;
}

.feature-text {
    font-weight: 400;
    margin-top: 0;
    margin-bottom: 20px;
}

.feature-title {
    margin-bottom: 12px;
}

.footer {
    background-color: #1f1f1f;
    width: 100%;
    height: 300px;
    text-align: center;
}

.white-h2 {
    font-size: 1.8em;
    font-weight: 400;
    padding-top: 50px;
    color: whitesmoke;
}

.white-h4 {
    font-size: 1.2em;
    font-weight: 400;
    color: whitesmoke;
}

#btm-links {
    text-align: center;
    margin: 20px;
    margin-top: 100px;
    font-family: 'Helvetica', sans-serif;
}

#btm-links a {
    margin-left: 20px;
    margin-right: 20px;
    text-decoration: none;
    color: whitesmoke;
}

.privacy-title {
    margin-top: 150px;
}

.privacy-body {
    font-family: 'Helvetica', sans-serif;
    text-align: left;
}

.privacy-body a {
    text-decoration: none;
}

.privacy-body h4 {
    margin-bottom: 0;
}

p {
    font-size: 1.1em;
}

#header-title a {
    text-decoration: none;
    color: #1c1c1c;
}

@media screen and (max-width:1200px) {
    #header-background-lg {
        display: none;
    }

    #header-background-med {
        display: block;
    }

    #main-image {
        margin-top: 180px;
    }

    #content-container {
        margin-top: 0;
    }

    #pic-1,
    #pic-2,
    #pic-3 {
        width: 300px
    }
    #base,
    #base-btm,
    #base-shadow {
        top: -15px;
        width: 365px;
    }

    h2 {
        font-size: 2.1em;
    }
    #banner-1 {
        margin-top: 280px
    }
    

    #btm-links {
        margin-top: 100px;
    }

    .privacy-title {
        margin-top: 250px;
    }
    
    .body-img {
        width: 500px;
    }

    .feature-text {
        font-size: 1.8em;
    }
}

@media screen and (max-width:1000px) {

    
    .row {
        flex-direction: column;
    }
    .row-rev {
        flex-direction: column-reverse;
    }
    .left-img {
        transform: none;
    }
    
    .right-img {
        transform: none;
    }

    .left-img:hover {
        transform: none;
    }
    
    .right-img:hover {
        transform: none;
    }

    .body-img {
        width: 100%;
        max-width: 600px;
        margin-bottom: -60px;
    }

    .left, .right {
        text-align: center;
        margin-bottom: 80px;
    }

}

@media screen and (max-width:770px) {
    #pic-3 {
        animation: MoveUpDownMaxSM 5s ease-in-out .1s infinite;
    }
    
    #pic-2 {
        animation: MoveUpDownMidSM 5s ease-in-out .1s infinite;
    }
    
    #pic-1 {
        animation: MoveUpDownMinSM 5s ease-in-out .1s infinite;
    }

    #header-background-med {
        display: none;
    }

    #header-background-sm {
        display: block;
    }

    #top-container {
        flex-direction: column;
    }
    #content-container {
        margin-top: 140px;
    }
    #main-image {
        width: 100%;
        margin-top: 100px;
    }
    h2 {
        font-size: 1.9em;
    }
    h3 {
        font-size: 0.9em;
    }
    #header-container {
        margin-top: 90px;
        width: 100%;
        display: flex;
        justify-content: center;
    }
    #header-logo {
        margin-left: 4px;
        height: 110px;
    }
    #header-text {
        margin-top: 6px;
    }
    #banner-1 {
        margin-top: 60px;
        width: 95%;
    }
    #pic-1,
    #pic-2,
    #pic-3 {
        width: 260px
    }
    #base,
    #base-btm,
    #base-shadow {
        top: -0px;
        width: 300px;
    }
    #top-links {
        text-align: center;
        font-size: 0.9em;
    }
    #top-links a {
        margin-left: 20px;
        margin-right: 20px;
    }
    #wrap {
        min-width: 300px;
        width: 85%;
    }

    .body-img {
        margin-bottom: -40px;
    }

    .feature-text {
        font-size: 1.5em;
    }

    #btm-links {
        margin-top: 70px;
    }

    .privacy-title {
        margin-top: 120px;
    }
}

@media screen and (max-width:600px) {

    #banner-1 {
        margin-top: 20px
    }

    #header-background-sm {
        display: none;
    }

    #header-background-xsm {
        display: block;

    }
}

@media screen and (max-width:400px) {
    #header-background-sm {
        display: none;
    }

    #header-background-xsm {
        display: block;

    }

    #wrap {
        width: 95%;
    }
}

@keyframes MoveUpDownMax {
    0%,
    100% {
        transform: translateY(0);
    }
    50% {
        transform: translateY(-160px) rotate(20deg) translateX(40px) scale(0.9);
    }
}

@keyframes MoveUpDownMid {
    0%,
    100% {
        transform: translateY(0);
    }
    50% {
        transform: translateY(-70px) rotate(4deg) translateX(-4px) scale(0.95);
    }
}

@keyframes MoveUpDownMin {
    0%,
    100% {
        transform: translateY(0);
    }
    50% {
        transform: translateY(-40px) rotate(-10deg) translateX(-40px) scale(0.98);
    }
}

@keyframes MoveUpDownMaxSM {
    0%,
    100% {
        transform: translateY(0);
    }
    50% {
        transform: translateY(-100px) rotate(20deg) translateX(20px) scale(0.95);
    }
}

@keyframes MoveUpDownMidSM {
    0%,
    100% {
        transform: translateY(0);
    }
    50% {
        transform: translateY(-60px) rotate(4deg) translateX(-4px) scale(0.97);
    }
}

@keyframes MoveUpDownMinSM {
    0%,
    100% {
        transform: translateY(0);
    }
    50% {
        transform: translateY(-30px) rotate(-10deg) translateX(-20px) scale(0.99);
    }
}

